--- a/css/main.css
+++ b/css/main.css
@@ -21,11 +21,108 @@ img {
 
 nav {
   position: absolute;
-  left: 0;
+  left: 100%;
   right: 0;
   top: 0;
   z-index: 1;
-  background: #fbe8a6;
+  background: rgba(251, 232, 166, 0.95);
+  height: 95vh;
+  transition: left ease-in-out 350ms;
+  overflow-x: hidden;
+}
+@media (min-width: 850px) {
+  nav {
+    left: 0;
+    top: -7vh;
+    position: fixed;
+    height: 7vh;
+    transition: top 0.3s;
+  }
+}
+nav ul {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  display: flex;
+  flex-direction: column;
+  height: 95vh;
+}
+@media (min-width: 850px) {
+  nav ul {
+    flex-direction: row;
+    height: 7vh;
+  }
+}
+nav li {
+  flex: 1 1 auto;
+  display: flex;
+  border-bottom: 1px solid rgba(244, 151, 108, 0.4);
+}
+nav li:last-of-type {
+  border-bottom: none;
+}
+@media (min-width: 850px) {
+  nav li {
+    border: none;
+  }
+}
+nav a {
+  text-decoration: none;
+  text-transform: uppercase;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-basis: 100%;
+  font-size: 1.2rem;
+  color: #439e47;
+  transition: background 350ms;
+}
+@media (min-width: 850px) {
+  nav a {
+    font-weight: 700;
+  }
+}
+nav a:hover, nav a:focus {
+  background: #fae089;
+}
+
+.icon-open, .icon-close {
+  height: 100px;
+  width: 100px;
+  position: relative;
+  top: 0.5em;
+  left: 0.5em;
+}
+
+.icon-close {
+  display: none;
+}
+
+@media (min-width: 850px) {
+  .icon-open {
+    display: none;
+  }
+}
+
+.nav-is-open nav {
+  left: 25%;
+  display: block;
+}
+@media (min-width: 850px) {
+  .nav-is-open nav {
+    left: 0;
+  }
+}
+.nav-is-open .icon-open {
+  display: none;
+}
+.nav-is-open .icon-close {
+  display: block;
+}
+@media (min-width: 850px) {
+  .nav-is-open .icon-close {
+    display: none;
+  }
 }
 
 .hero {
