--- a/scss/layout/_nav.scss
+++ b/scss/layout/_nav.scss
@@ -1,10 +1,111 @@
 nav {
 position: absolute;
-left: 0;
+left: 100%;
 right: 0;
 top: 0;
 z-index: 1;
+background: rgba($clr-yellow, .95);
+height: 95vh;
 
-background: $clr-yellow;
+
+transition: left ease-in-out 350ms;
+overflow-x: hidden;
+@include mq(medium) {
+left: 0;
+top: -7vh;
+position: fixed;
+height: 7vh;
+transition: top .3s;
+}
+
+
+ul {
+margin: 0;
+padding: 0;
+list-style: none;
+display: flex;
+flex-direction: column;
+height: 95vh;
+
+@include mq(medium) {
+flex-direction: row;
+height: 7vh;
+}
+}
+
+li {
+flex: 1 1 auto;
+display: flex;
+border-bottom: 1px solid rgba($clr-orange, .4);
+
+&:last-of-type {
+border-bottom: none;
+}
+
+@include mq(medium) {
+border:none;
+}
+}
+
+a {
+text-decoration: none;
+text-transform: uppercase;
+display: flex;
+justify-content: center;
+align-items: center;
+flex-basis: 100%;
+font-size: 1.2rem;
+color: green(medium);
+transition: background 350ms;
+@include mq(medium) {
+font-weight: $fw-bold;
+}
+
+&:hover, &:focus {
+background: darken($clr-yellow, 6);
+}
 
 }
+}
+
+.icon-open, .icon-close {
+height: 100px;
+width: 100px;
+position: relative;
+top: 0.5em;
+left: 0.5em;
+
+}
+
+.icon-close {
+display: none;
+}
+
+.icon-open {
+@include mq(medium) {
+display: none;
+}
+}
+
+.nav-is-open {
+nav {
+left: 25%;
+display: block;
+@include mq(medium) {
+left: 0;
+}
+
+}
+
+.icon-open {
+display: none;
+}
+
+.icon-close {
+display: block;
+@include mq(medium) {
+display: none;
+}
+}
+}
+
