--- a/css/main.css
+++ b/css/main.css
@@ -128,12 +128,17 @@ nav a:hover, nav a:focus {
 
 .hero {
   height: 95vh;
-  background-image: url(../img/hero2.png);
+  background-image: url(../img/herosm.png);
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
   background-attachment: fixed;
   position: relative;
+}
+@media (min-width: 450px) {
+  .hero {
+    background-image: url(../img/hero2.png);
+  }
 }
 @media (min-width: 850px) {
   .hero {
