--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,8 @@
 @import url("https://fonts.googleapis.com/css?family=Alegreya+Sans:300,400,500,700,800,900|Crimson+Text:400,700|Laila:300,400,500,700|Merriweather:300,400,700,900|Permanent+Marker|Signika:300,400,700");
+body {
+  font-family: "Crimson Text", serif;
+}
+
 h1, h2, h3, h4, p, figure, figcaption {
   margin: 0;
   padding: 0;
@@ -25,7 +29,7 @@ nav {
   right: 0;
   top: 0;
   z-index: 1;
-  background: rgba(251, 232, 166, 0.95);
+  background: rgba(67, 158, 71, 0.8);
   height: 95vh;
   transition: left ease-in-out 350ms;
   overflow-x: hidden;
@@ -37,6 +41,7 @@ nav {
     position: fixed;
     height: 7vh;
     transition: top 0.3s;
+    background: rgba(67, 158, 71, 0.2);
   }
 }
 nav ul {
@@ -68,21 +73,24 @@ nav li:last-of-type {
 }
 nav a {
   text-decoration: none;
-  text-transform: uppercase;
+  font-family: "Alegreya Sans", sans-serif;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-basis: 100%;
   font-size: 1.2rem;
+  color: #fbe8a6;
   transition: background 350ms;
 }
 @media (min-width: 450px) {
   nav a {
     font-weight: 700;
+    color: #479761;
   }
 }
 nav a:hover, nav a:focus {
-  background: #fae089;
+  background: rgba(251, 232, 166, 0.6);
+  color: #479761;
 }
 
 .icon-open, .icon-close {
@@ -183,13 +191,35 @@ nav a:hover, nav a:focus {
 
 footer {
   position: relative;
-  max-height: 80vh;
+  height: 80vh;
 }
 
 .fot-img {
   position: absolute;
   left: 0;
   right: 0;
+  bottom: 0;
+}
+
+.fox2 {
+  position: absolute;
+  right: 0em;
+  display: none;
+}
+@media (min-width: 1200px) {
+  .fox2 {
+    bottom: 2.5em;
+    display: block;
+    height: 80px;
+    width: 150px;
+  }
+}
+@media (min-width: 1800px) {
+  .fox2 {
+    bottom: 4em;
+    width: 200px;
+    height: 100px;
+  }
 }
 
 /*# sourceMappingURL=main.css.map */
