--- a/scss/base/_typography.scss
+++ b/scss/base/_typography.scss
@@ -1,5 +1,10 @@
 @import url('https://fonts.googleapis.com/css?family=Alegreya+Sans:300,400,500,700,800,900|Crimson+Text:400,700|Laila:300,400,500,700|Merriweather:300,400,700,900|Permanent+Marker|Signika:300,400,700');
 
+body {
+
+font-family: $ff-crimson;
+}
+
 h1, h2, h3, h4, p, figure, figcaption {
 margin: 0;
 padding: 0;
