--- a/scss/layout/_nav.scss
+++ b/scss/layout/_nav.scss
@@ -4,7 +4,7 @@ left: 100%;
 right: 0;
 top: 0;
 z-index: 1;
-background: rgba($clr-yellow, .95);
+background: rgba(green(medium), .8);
 height: 95vh;
 
 
@@ -16,6 +16,7 @@ top: 0;
 position: fixed;
 height: 7vh;
 transition: top .3s;
+background: rgba(green(medium), .2);
 }
 
 
@@ -49,20 +50,23 @@ border:none;
 
 a {
 text-decoration: none;
-text-transform: uppercase;
+font-family: $ff-alegreya;
 display: flex;
 justify-content: center;
 align-items: center;
 flex-basis: 100%;
 font-size: 1.2rem;
-color: green(small);
+color: $clr-yellow;
 transition: background 350ms;
 @include mq(small) {
 font-weight: $fw-bold;
+color: green(dark);
+
 }
 
 &:hover, &:focus {
-background: darken($clr-yellow, 6);
+background: rgba($clr-yellow, .6);
+color: green(dark);
 }
 
 }
