--- a/scss/abstracts/_colors.scss
+++ b/scss/abstracts/_colors.scss
@@ -2,6 +2,9 @@ $clr-yellow: #fbe8a6;
 $clr-orange: #f4976c;
 $clr-soft-pink: #fff4f0;
 
+$clr-title:#192618;
+$clr-card: #68bc68;
+
 $greens: (
 extra: #ccffd8,
 soft: #a1ffbb,
