--- a/css/main.css
+++ b/css/main.css
@@ -58,6 +58,12 @@ nav ul {
     height: 7vh;
   }
 }
+@media (min-width: 850px) {
+  nav ul {
+    max-width: 80%;
+    margin: 0 auto;
+  }
+}
 nav li {
   flex: 1 1 auto;
   display: flex;
@@ -148,13 +154,6 @@ nav a:hover, nav a:focus {
     background-image: url(../img/hero2.png);
   }
 }
-@media (min-width: 850px) {
-  .hero {
-    max-width: 90%;
-    margin: 0 auto;
-  }
-}
-
 .title-img {
   position: absolute;
   left: 0;
@@ -189,8 +188,65 @@ nav a:hover, nav a:focus {
   }
 }
 
+.eco-systems {
+  background-color: #fbe8a6;
+  min-height: 60vh;
+}
+@media (min-width: 850px) {
+  .eco-systems {
+    min-height: 300px;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-image: url(../img/info2.png);
+    background-color: #439e47;
+  }
+}
+
+.systems {
+  display: grid;
+  text-align: center;
+  padding: 1em 1em;
+}
+@media (min-width: 850px) {
+  .systems {
+    grid-template-columns: repeat(3, 1fr);
+    max-width: 80%;
+    margin: 0 auto;
+  }
+}
+
+.system {
+  margin: 2em 1em;
+}
+.system__title {
+  color: #192618;
+}
+.system__title::after {
+  content: "";
+  height: 1px;
+  width: 30%;
+  background: rgba(25, 38, 24, 0.3);
+  display: block;
+  margin: 0 auto;
+}
+.system__text {
+  padding: 0.5em 1em;
+}
+@media (min-width: 1200px) {
+  .system__text {
+    padding: 0.5em 5em;
+  }
+}
+
+.animals {
+  padding: 4em 0;
+  background: #439e47;
+}
+
 footer {
   position: relative;
+  background: #c8f4b3;
   height: 80vh;
 }
 
@@ -208,17 +264,17 @@ footer {
 }
 @media (min-width: 1200px) {
   .fox2 {
-    bottom: 2.5em;
+    bottom: 2em;
     display: block;
-    height: 80px;
-    width: 150px;
+    height: 85px;
+    width: 160px;
   }
 }
-@media (min-width: 1800px) {
+@media (min-width: 1400px) {
   .fox2 {
-    bottom: 4em;
-    width: 200px;
-    height: 100px;
+    bottom: 3em;
+    height: 90px;
+    width: 180px;
   }
 }
 
