--- a/scss/main.scss
+++ b/scss/main.scss
@@ -13,5 +13,7 @@
 @import "layout/general";
 @import "layout/nav";
 @import "layout/hero";
+@import "layout/eco";
+@import "layout/animals";
 @import "layout/footer";
 
