--- a/css/main.css
+++ b/css/main.css
@@ -243,11 +243,121 @@ nav a:hover, nav a:focus {
   padding: 4em 0;
   background: #439e47;
 }
+.animals__title {
+  color: #fbe8a6;
+  text-align: center;
+  text-transform: uppercase;
+  font-size: 1.2rem;
+  letter-spacing: 2px;
+}
+@media (min-width: 850px) {
+  .animals__title {
+    font-size: 1.8rem;
+  }
+}
+
+.cards {
+  display: grid;
+  text-align: center;
+  margin: 1em;
+}
+@media (min-width: 850px) {
+  .cards {
+    grid-template-columns: repeat(3, 1fr);
+    grid-column-gap: 1em;
+  }
+}
+
+.card__bg {
+  padding: 0.5em;
+  background: #fbe8a6;
+  max-width: 25em;
+  margin: 1em auto;
+}
+
+.card__bg2 {
+  background: #f4976c;
+  padding: 0.5em;
+  background: #f4976c;
+  max-width: 25em;
+  margin: 1em auto;
+}
+
+.card {
+  background: #68bc68;
+  padding: 3em 1.5em;
+  position: relative;
+}
+.card__title {
+  color: #192618;
+  letter-spacing: 2px;
+}
+.card__text {
+  color: rgba(251, 232, 166, 0.9);
+  padding: 0.5em;
+}
+
+.deco {
+  position: relative;
+  top: -1em;
+}
+
+.btn-card1, .btn-card2 {
+  text-decoration: none;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  padding: 0.8em 1.5em;
+  display: inline-block;
+  margin-top: 1em;
+}
+
+.btn-card1 {
+  background: #fbe8a6;
+  color: rgba(25, 38, 24, 0.7);
+  transition: background 350ms;
+}
+.btn-card1:hover, .btn-card1:focus {
+  background: #fae28e;
+}
+
+.btn-card2 {
+  background: #f4976c;
+  color: rgba(25, 38, 24, 0.7);
+  transition: background 350ms;
+}
+.btn-card2:hover, .btn-card2:focus {
+  background: #f28654;
+}
 
 footer {
   position: relative;
   background: #c8f4b3;
-  height: 80vh;
+  height: 30vh;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  font-family: "Permanent Marker", cursive;
+}
+@media (min-width: 850px) {
+  footer {
+    height: 70vh;
+  }
+}
+footer h2 {
+  font-size: 1.3rem;
+}
+@media (min-width: 850px) {
+  footer h2 {
+    font-family: "Permanent Marker", cursive;
+    font-size: 2rem;
+  }
+}
+
+.footer__text {
+  font-size: 0.8rem;
+  padding-top: 1em;
 }
 
 .fot-img {
