--- a/scss/layout/_eco.scss
+++ b/scss/layout/_eco.scss
@@ -5,7 +5,7 @@ min-height: 60vh;
 min-height: 300px;
 @include bg;
 background-image: url(../img/info2.png);
-background-color: #439e47;
+background-color: #b2f49f;
 }
 }
 
